tests/machine/x/fs/group_by_left_join.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/group_by_left_join.fs(43,3): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (42:48). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/group_by_left_join.fs(43,3): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (42:48). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/group_by_left_join.fs(43,62): error FS0010: Unexpected yield in binding. Expected incomplete structured construct at or before this point or other token.

/workspace/mochi/tests/machine/x/fs/group_by_left_join.fs(43,3): error FS0588: Block following this 'let' is unfinished. Expect an expression.

/workspace/mochi/tests/machine/x/fs/group_by_left_join.fs(44,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (42:27). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/group_by_left_join.fs(44,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (42:27). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/group_by_left_join.fs(44,13): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (42:27). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/group_by_left_join.fs(44,13): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (42:27). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/group_by_left_join.fs(44,20): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (42:27). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/group_by_left_join.fs(44,20): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (42:27). Try indenting this token further or using standard formatting conventions.
